Adding 'Download CV' button and New Fonts

--- a/portfolio/index.html
+++ b/portfolio/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
 <meta charset="UTF-8">
-<meta name="viewport" content="width=device-width, inital-scale=1, user-scalable=no">
+<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no">
 <!-- Title of the Webpage -->
 <title>Portfolio - Matthew Hockham</title>
 <!-- Meta tag for SEO -->
@@ -21,7 +21,9 @@
 
 </head>
     <body>
+        <!-- Header -->
         <div class="header" id="header">
+            <!-- Logo -->
             <div class="logo">
                 <a href="#">
                     <img class="logo-img" src="images/logo.png" alt="My logo">
@@ -30,6 +32,15 @@
                         <br>
                         Hockham
                     </span>
+                </a>
+            </div>
+            <!-- Mobile Menu Button -->
+             <a href="#" class="menu-btn"></a>
+
+            <!-- Download CV Button -->
+            <a href="#" class="btn download-cv-btn">
+                DOWNLOAD CV
+                <i class="icon fas fa-download"></i>
                 </a>
             </div>
         </div>
