Moving Folders & Branch Config

--- a/portfolio/index.html
+++ b/portfolio/index.html
@@ -26,7 +26,7 @@
             <!-- Logo -->
             <div class="logo">
                 <a href="#">
-                    <img class="logo-img" src="images/logo.png" alt="My logo">
+                    <img class="logo-img" src="extfiles/images/logo.png" alt="My logo">
                     <span class="logo-name">
                         Matthew
                         <br>
@@ -38,7 +38,7 @@
              <a href="#" class="menu-btn"></a>
 
             <!-- Download CV Button -->
-            <a href="#" class="btn download-cv-btn">
+            <a href="extfiles/Matthew Hockham CV.docx" class="btn download-cv-btn">
                 DOWNLOAD CV
                 <i class="icon fas fa-download"></i>
                 </a>
