Added buttons on header & Background Colour

--- a/index.html
+++ b/index.html
@@ -1,29 +1,31 @@
 <!doctype html>
 <html lang="en">
-<head>
-<meta charset="UTF-8">
-<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no">
-<!-- Title of the Webpage -->
-<title>Portfolio - Matthew Hockham</title>
-<!-- Meta tag for SEO -->
-<meta name="description" content="">
-<!-- Linked CSS File -->
-<link rel="stylesheet" type="text/css" href="css/stylesheet.css">
-<!-- Font Awesome Icons -->
-<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css">
+    
+    <head>
+        <meta charset="UTF-8">
+        <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no">
+        <!-- Title of the Webpage -->
+        <title>Portfolio - Matthew Hockham</title>
+        <!-- Meta tag for SEO -->
+        <meta name="description" content="">
+        <!-- Linked CSS File -->
+        <link rel="stylesheet" type="text/css" href="css/stylesheet.css">
+        <!-- Font Awesome Icons -->
+        <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css">
 
-<!-- Embedded CSS to allow smooth scroll -->
-<style type="text/css">
-    html {
-        scroll-behavior: smooth !important;
-    }
-</style>
+        <!-- Embedded CSS to allow smooth scroll -->
+        <style type="text/css">
+            html {
+                scroll-behavior: smooth !important;
+            }
+        </style>
 
-</head>
+    </head>
+
     <body>
-        <!-- Header -->
+    <!-- Header -->
         <div class="header" id="header">
-            <!-- Logo -->
+        <!-- Logo -->
             <div class="logo">
                 <a href="#">
                     <img class="logo-img" src="extfiles/images/logo.png" alt="My logo">
@@ -34,19 +36,48 @@
                     </span>
                 </a>
             </div>
-            <!-- Mobile Menu Button -->
+        <!-- Mobile Menu Button -->
              <a href="#" class="menu-btn"></a>
 
-            <!-- Download CV Button -->
+        <!-- Download CV Button -->
             <a href="extfiles/Matthew Hockham CV.docx" class="btn download-cv-btn">
                 DOWNLOAD CV
                 <i class="icon fas fa-download"></i>
-                </a>
+            </a>
+            
+
+        <!-- Buttons for Header -->
+            <div class="header-menu">
+                <div class="header-menu-nav">
+                    <ul class="menu">
+                        <li class="menu-item">
+                            <a href="#home">HOME</a>
+                        </li>
+                        <li class="menu-item">
+                            <a href="#about">ABOUT</a>
+                        </li>
+                        <li class="menu-item">
+                            <a href="#resume">RESUME</a>
+                        </li>
+                        <li class="menu-item">
+                            <a href="#projects">MY PROJECTS</a>
+                        </li>
+                        <li class="menu-item">
+                            <a href="#contact">CONTACT</a>
+                        </li>
+                    </ul>
+                </div>
             </div>
         </div>
+    <!-- Background -->
+         <div class="background">
+            <div class="background-filter">
+                <div class="background-img" style="background-image: url('');"></div>
+            </div>
+         </div>
+    <!-- Main Section Begins Here -->
 
 
     </body>
-
 
 </html>
