Start on main content of website & Couple of fixes

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
     
     <head>
         <meta charset="UTF-8">
-        <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <!-- Title of the Webpage -->
         <title>Portfolio - Matthew Hockham</title>
         <!-- Meta tag for SEO -->
@@ -39,10 +39,10 @@
         <!-- Mobile Menu Button -->
              <a href="#" class="menu-btn"></a>
 
-        <!-- Download CV Button -->
-            <a href="extfiles/Matthew Hockham CV.docx" class="btn download-cv-btn">
-                DOWNLOAD CV
-                <i class="icon fas fa-download"></i>
+        <!-- Contact Me Button -->
+            <a href="#" class="btn contact-me-btn">
+                CONTACT ME
+                <i class="fa-solid fa-address-book"></i>
             </a>
             
 
@@ -62,9 +62,6 @@
                         <li class="menu-item">
                             <a href="#projects">MY PROJECTS</a>
                         </li>
-                        <li class="menu-item">
-                            <a href="#contact">CONTACT</a>
-                        </li>
                     </ul>
                 </div>
             </div>
@@ -76,7 +73,21 @@
             </div>
          </div>
     <!-- Main Section Begins Here -->
+         <div class="section start" id="section-start">
+            <div class="central full-width">
+                <div class="center-vertical">
+                    <h1 class="h-title">
+                        Matthew
+                        <br>
+                        Hockham
+                    </h1>
 
+                    <div class="content-start">
+
+                    </div>
+                </div>
+            </div>
+         </div>
 
     </body>
 
